--- a/src/components/Ranking.module.css
+++ b/src/components/Ranking.module.css
@@ -48,7 +48,7 @@ box-shadow:  22px 22px 45px #a8a7a7,
    color: rgb(83, 84, 82);
    text-transform: capitalize;
    font-weight: 800;
-   font-size: 3vw;
+   font-size: 4vw;
    padding: 8px;
    display: flex;
    justify-content: center;
